fix(f, AuthForm): updated spacing of elements

--- a/frontend/src/web/components/Input/Input.module.css
+++ b/frontend/src/web/components/Input/Input.module.css
@@ -1,5 +1,6 @@
 .inputContainer {
   position: relative;
+  width: 100%;
 
   svg {
     fill: none;
@@ -15,7 +16,7 @@
   line-height: 1.5;
 
   width: 100%;
-  padding: 14px;
+  padding: 13px 14px;
 }
 
 .input::placeholder {
